RESOLVED FIXED44673
Web Inspector: scripts are pushed to front-end before resources
https://bugs.webkit.org/show_bug.cgi?id=44673
Summary Web Inspector: scripts are pushed to front-end before resources
Pavel Podivilov
Reported 2010-08-26 03:15:57 PDT
Web Inspector: scripts are pushed to front-end before resources
Attachments
Proposed patch. (2.87 KB, patch)
2010-08-26 03:29 PDT, Pavel Podivilov
no flags
Proposed patch. (2.87 KB, patch)
2010-08-26 03:42 PDT, Pavel Podivilov
commit-queue: commit-queue-
Pavel Podivilov
Comment 1 2010-08-26 03:29:55 PDT
Created attachment 65539 [details] Proposed patch.
WebKit Review Bot
Comment 2 2010-08-26 03:34:21 PDT
Attachment 65539 [details] did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style']" exit_code: 1 WebCore/inspector/InspectorController.cpp:665: One line control clauses should not use braces. [whitespace/braces] [4] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Pavel Podivilov
Comment 3 2010-08-26 03:42:03 PDT
Created attachment 65541 [details] Proposed patch.
Pavel Feldman
Comment 4 2010-08-26 03:56:07 PDT
Comment on attachment 65541 [details] Proposed patch. Clearing flags on attachment: 65541 Committed r66094: <http://trac.webkit.org/changeset/66094>
Pavel Feldman
Comment 5 2010-08-26 03:56:17 PDT
All reviewed patches have been landed. Closing bug.
WebKit Commit Bot
Comment 6 2010-08-26 04:30:07 PDT
Comment on attachment 65541 [details] Proposed patch. Rejecting patch 65541 from commit-queue. Unexpected failure when processing patch! Please file a bug against webkit-patch. Failed to run "['./WebKitTools/Scripts/webkit-patch', '--status-host=queues.webkit.org', 'land-attachment', '--force-clean', '--build', '--non-interactive', '--ignore-builders', '--build-style=both', '--quiet', 65541, '--test', '--parent-command=commit-queue', '--no-update']" exit_code: 1 Last 500 characters of output: cgi?id=65541&action=edit Fetching: https://bugs.webkit.org/show_bug.cgi?id=44673&ctype=xml Processing 1 patch from 1 bug. Cleaning working directory Processing patch 65541 from bug 44673. NOBODY (OOPS!) found in /Users/eseidel/Projects/CommitQueue/WebCore/ChangeLog does not appear to be a valid reviewer according to committers.py. ERROR: /Users/eseidel/Projects/CommitQueue/WebCore/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive).
WebKit Review Bot
Comment 7 2010-08-26 04:34:41 PDT
http://trac.webkit.org/changeset/66094 might have broken GTK Linux 64-bit Debug The following changes are on the blame list: http://trac.webkit.org/changeset/66093 http://trac.webkit.org/changeset/66094
Note You need to log in before you can comment on or make changes to this bug.