2010-08-26  Pavel Podivilov  <podivilov@chromium.org>

Reviewed by Pavel Feldman.

        Web Inspector: enable debugger after resources are pushed to front-end
        https://bugs.webkit.org/show_bug.cgi?id=44673

        * inspector/InspectorController.cpp:
        (WebCore::InspectorController::connectFrontend):
        (WebCore::InspectorController::populateScriptObjects):

Canonical link: https://commits.webkit.org/56866@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@66094 268f45cc-cd09-0410-ab3c-d52691b4dbfc